--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,29 @@
     transform: rotate(360deg);
   }
 }
+
+.Video {
+  width: 460px;
+  padding: 10px 10px 1px;
+  margin: 10px;
+
+  background: #000000;
+}
+
+.Video iframe {
+  display: block;
+  width: 440px;
+  height: 240px;
+  margin: 0 auto;
+
+  border: none;
+}
+
+.DateTime {
+  margin: 6px 0 0 0;
+
+  font-size: 80%;
+  text-align: right;
+
+  color: #cccccc;
+}
